--- a/app/views/travel_admin/pay_credit_cards/show.html.erb
+++ b/app/views/travel_admin/pay_credit_cards/show.html.erb
@@ -78,8 +78,16 @@
 <h3>User info</h3>
 <table class='table table-bordered'>
   <tr>
-    <td class='table-header'>Name:</td>
+    <td class='table-header'>Display Name:</td>
     <td><%= user.full_name %></td>
+  </tr>
+  <tr>
+    <td class='table-header'>Payment Name:</td>
+    <td><%= user.payment_name %></td>
+  </tr>
+  <tr>
+    <td class='table-header'>Tel:</td>
+    <td><%= user.payment_tel %></td>
   </tr>
   <tr>
     <td class='table-header'>Email:</td>
