--- a/app/views/travel_admin/shared/_main_menu.html.erb
+++ b/app/views/travel_admin/shared/_main_menu.html.erb
@@ -86,6 +86,7 @@
       </a>
       <ul class='dropdown-menu'>
         <li><%= link_to 'Reset schedules data', 'admin/reset_schedules'  %></li>
+        <li><%= link_to 'Auto fill user payment name', 'admin/autofill_pname'  %></li>
       </ul>
     </li>
   <% end %>
