--- a/app/assets/stylesheets/admin/shared/toolbox.css.scss
+++ b/app/assets/stylesheets/admin/shared/toolbox.css.scss
@@ -1,6 +1,7 @@
 #top_place_holder {height:82px; background-color: #c8e0c0;}
 #toolbox{
   background-color: #c8e0c0;
+  padding-bottom: 10px;
 }
 .breadcrumb{
   padding: 4px 0;
@@ -14,3 +15,4 @@
   top:51px; background-color:#c8e0c0;
   z-index: 10;
 }
+
