--- a/app/views/layouts/travel_admin/application.html.haml
+++ b/app/views/layouts/travel_admin/application.html.haml
@@ -5,8 +5,9 @@
       admin-#{@title}
     = favicon_link_tag
     %meta{:content => "width=device-width, initial-scale=1.0", :name => @title}
-    %link{:href=>"//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css", :rel=>"stylesheet"}
-    = stylesheet_link_tag 'admin/admin', '/css/my_icons/glyphicons', '/css/my_icons/gicons'
+    %link{:href=>"//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.no-icons.min.css", :rel=>"stylesheet"}
+    %link{:href=>"//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css", :rel=>"stylesheet"}
+    = stylesheet_link_tag 'admin/admin'
     = javascript_include_tag 'admin/admin', '/css/xheditor/xheditor-1.1.14-zh-cn.min', '/css/bootstrap/js/bootstrap-datepicker'
     %script{:src=>"//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"}
     = csrf_meta_tags
@@ -22,7 +23,7 @@
       .container
         .quick-go
           = render 'travel_admin/shared/sidebar'
-        .search-box
+        %div
           = yield :search_box
     #progress
       = image_tag 'admin/progress.gif'
