--- a/app/views/travel_admin/shared/_status.html.haml
+++ b/app/views/travel_admin/shared/_status.html.haml
@@ -1,6 +1,6 @@
-%label.radio.inline
-  = f.radio_button :status, '0'
-  hide
-%label.radio.inline
+%label.checkbox-inline
   = f.radio_button :status, '1'
-  show
+  Show
+%label.checkbox-inline
+  = f.radio_button :status, '0'
+  Hide
