--- a/app/views/travel_admin/destinations/_form.html.haml
+++ b/app/views/travel_admin/destinations/_form.html.haml
@@ -1,12 +1,15 @@
 - @object.build_description if @object.new_record?
-.modal-header
-  %button.close{"aria-hidden" => "true", "data-dismiss" => "modal", :type => "button"} ×
-  %h3#myModalLabel
-    Edit Destination# #{@object.id}
-.modal-body
-  = form_for( @object, :remote => true) do |f|
-    = render :partial => 'travel_admin/shared/description', :locals => {:f => f}
-    = render :partial => 'travel_admin/shared/status', :locals => {:f => f}
-.modal-footer
-  %button.btn{"aria-hidden" => "true", "data-dismiss" => "modal"} Close
-  %button.btn.btn-primary{:onclick => "submit_dialog_form(this)"} Save changes
+.modal-dialog
+  .modal-content
+    .modal-header
+      %button.close{"aria-hidden" => "true", "data-dismiss" => "modal", :type => "button"} &times;
+      %h4.modal-title 
+        Edit Destination# #{@object.id}
+    .modal-body
+      = form_for( @object, :remote => true) do |f|
+        = render :partial => 'travel_admin/shared/description', :locals => {:f => f}
+        = render :partial => 'travel_admin/shared/status', :locals => {:f => f}
+    .modal-footer
+      %button.btn.btn-default{"data-dismiss" => "modal"} Close
+      %button.btn.btn-primary{:onclick => "submit_dialog_form(this)"} Save changes
+ 
