--- a/app/views/travel_admin/orders/index.html.haml
+++ b/app/views/travel_admin/orders/index.html.haml
@@ -5,14 +5,13 @@
       %span.divider /
     %li.active All Orders
 = content_for :search_box do
-  = form_for( @search, :url => orders_path ) do |f|
+  = search_form_for( @q, class: 'form-inline' ) do |f|
     .input-prepend.input-append
       %span.add-on Title
-      = f.text_field :order_number_contains, :class => 'span2'
+      = f.text_field :order_number_cont, :class => ''
       = search_button
 %section
-  .data-pager
-    = will_paginate(@collection, :class => 'pagination pagination-mini')
+  = will_paginate @collection
   %table#list_orders.data-list.table.table-bordered.table-striped
     %thead
       %tr.table-header
@@ -25,5 +24,4 @@
     %tbody
       - @collection.each do |order|
         = render :partial => 'row', :object => order
-  .data-pager
-    = will_paginate(@collection, :class => 'pagination pagination-mini')
+  = will_paginate @collection
