--- a/app/views/travel_admin/schedules/index.html.haml
+++ b/app/views/travel_admin/schedules/index.html.haml
@@ -5,12 +5,12 @@
       %span.divider /
     %li.active Schedules
 = content_for :search_box do
-  = form_for(@search, :url => schedules_path) do |f|
+  = search_form_for @q, class: 'form-inline'  do |f|
     .input-prepend.input-append
       %span.add-on From
-      = f.text_field :departure_date_greater_than_or_equal_to, :class => 'span2 date-picker'
+      = f.text_field :departure_date_gteq, :class => 'span2 date-picker'
       %span.add-on To
-      = f.text_field :departure_date_less_than_or_equal_to, :class => 'span2 date-picker'
+      = f.text_field :departure_date_lteq, :class => 'span2 date-picker'
       = search_button
 %section
   %ul#list_emps.nav.nav-tabs
