--- a/app/views/travel_admin/destinations/_detail.html.haml
+++ b/app/views/travel_admin/destinations/_detail.html.haml
@@ -1,13 +1,13 @@
 - if detail.description
   %h2
-    = detail.description.title
-    , #{detail.description.title_cn}
-  .small-image-left
-    = image_tag detail.title_photo.pic.url(:small) if detail.title_photo
-  %pre
-    = raw detail.description.cn
-  %br/
-  %pre
-    = raw detail.description.en
-%br/
-= button_link_to_edit detail
+    #{detail.description.title}, #{detail.description.title_cn}
+  .row
+    .col-md-6
+      .well
+        .small-image-left
+          = image_tag detail.title_photo.pic.url(:small) if detail.title_photo
+        = raw detail.description.en
+    .col-md-6
+      .well
+        = raw detail.description.cn
+      = button_link_to_edit detail
