--- a/app/assets/stylesheets/admin/shared/sidebar.css.scss
+++ b/app/assets/stylesheets/admin/shared/sidebar.css.scss
@@ -1,2 +1,6 @@
 .search-label {width: 60px !important;}
-.quick-go { float:right;}
+.quick-go { 
+  float:right; width:380px;
+  .col {width: 25%; float:left;}
+
+}
