--- a/app/views/travel_admin/tours/index.html.haml
+++ b/app/views/travel_admin/tours/index.html.haml
@@ -6,15 +6,15 @@
     %li.active Tours
 = content_for :search_box do
   = search_form_for @q, class: 'form-inline' do |f|
-    .form-group
-      = f.select :tour_type_eq, InputType.get_list('tour').map{|t| [t.type_text, t.type_value]}.insert(0, ['All tours', nil]), {}, :class => 'form-control'
-    .form-group
-      = f.select :status_eq, [['All Status', nil],['show', 1], ['hide', 0]],{}, :class => 'form-control'
-    .form-group
-      = f.text_field :description_title_cont, :class => 'form-control', placeholder: 'Search tours'
-    = search_button 
-    = link_to_new 'New Tour', 'tours/new'
-    = icon_link_to "Generate schedules", generate_tours_path, :icon => 'icon-share', :class => 'btn btn-info'
+    .col-md-6
+      .input-group
+        .input-group-addon
+          = f.select :tour_type_eq, InputType.get_list('tour').map{|t| [t.type_text, t.type_value]}.insert(0, ['All tours', nil]), {}
+        = f.text_field :description_title_cont, :class => 'form-control', placeholder: 'Search tours'
+        .input-group-btn.btn-group
+          = search_button 
+          = link_to_new 'New Tour', 'tours/new'
+          = icon_link_to "Generate schedules", generate_tours_path, :icon => 'icon-share', :class => 'btn btn-info'
 %section
   .data-pager
     = will_paginate(@collection, :class => 'pagination pagination-mini')
