--- a/app/views/travel_admin/destinations/_form.html.haml
+++ b/app/views/travel_admin/destinations/_form.html.haml
@@ -6,9 +6,16 @@
       %h4.modal-title 
         Edit Destination# #{@object.id}
     .modal-body
-      = form_for( @object, :remote => true) do |f|
-        = render :partial => 'travel_admin/shared/description', :locals => {:f => f}
-        = render :partial => 'travel_admin/shared/status', :locals => {:f => f}
+      = simple_form_for(@object, :remote => true) do |f|
+        = f.fields_for :description do |desc|
+          .row
+            .col-md-6
+              = desc.input :title
+              = desc.input :en, input_html: {:class => 'html-editor'}
+            .col-md-6
+              = desc.input :title_cn
+              = desc.input :cn, input_html: {class: 'html-editor'}
+        = f.input :status, collection: [['Show', 1],['Hide', 0]]
     .modal-footer
       %button.btn.btn-default{"data-dismiss" => "modal"} Close
       %button.btn.btn-primary{:onclick => "submit_dialog_form(this)"} Save changes
