--- a/app/views/travel_admin/schedules/_form.html.haml
+++ b/app/views/travel_admin/schedules/_form.html.haml
@@ -1,31 +1,20 @@
-.modal-header
-  %button.close{"aria-hidden" => "true", "data-dismiss" => "modal", :type => "button"} ×
-  %h3#myModalLabel
-    Edit Schedule# #{@object.id}
-.modal-body
-  = form_for( @object, :remote => true) do |f|
-    = f.fields_for :price do |fp|
-      .row
-        .span4
-          %div
-            = fp.label :price_adult
-            = fp.text_field :price_adult
-          %div
-            = fp.label :price_child
-            = fp.text_field :price_child
-        .span4
-          %div
-            = fp.label :price1
-            = fp.text_field :price1
-          %div
-            = fp.label :price2
-            = fp.text_field :price2
-          %div
-            = fp.label :price3
-            = fp.text_field :price3
-          %div
-            = fp.label :price4
-            = fp.text_field :price4
-.modal-footer
-  %button.btn{"aria-hidden" => "true", "data-dismiss" => "modal"} Close
-  %button.btn.btn-primary{:onclick => "submit_dialog_form(this)"} Save changes
+.modal-dialog
+  .modal-content
+    .modal-header 
+      %button.close{"aria-hidden" => "true", "data-dismiss" => "modal", :type => "button"} &times;
+      %h4.modal-title Edit Schedule# #{@object.id}
+    .modal-body
+      = simple_form_for( @object, :remote => true) do |f|
+        = f.simple_fields_for :price do |fp|
+          .row
+            .col-md-6
+              = fp.input :price_adult
+              = fp.input :price_child
+            .col-md-6
+              = fp.input :price1
+              = fp.input :price2
+              = fp.input :price3
+              = fp.input :price4
+    .modal-footer
+      %button.btn{"aria-hidden" => "true", "data-dismiss" => "modal"} Close
+      %button.btn.btn-primary{:onclick => "submit_dialog_form(this)"} Save changes
