--- a/app/views/travel_admin/destinations/index.html.haml
+++ b/app/views/travel_admin/destinations/index.html.haml
@@ -10,7 +10,7 @@
     .col-md-4
       .input-group
         = f.text_field :description_title_cont, class: 'form-control', placeholder: 'Search destinations'
-        .input-group-btn.btn-group
+        .input-group-btn
           = search_button 
           = link_to_new 'New Destination', 'destinations/new'
 
