--- a/app/views/travel_admin/tours/_tour_price.html.haml
+++ b/app/views/travel_admin/tours/_tour_price.html.haml
@@ -9,10 +9,10 @@
         = s.text_field :price_child, class: 'form-control'
       .form-group
         = s.label :single_charge
-        = s.text_field :single_charge, :placeholder => 'Single room additional charge', :title => 'Single room additional charge', class: 'form-group'
+        = s.text_field :single_charge, :placeholder => 'Single room additional charge', :title => 'Single room additional charge', class: 'form-control'
       .form-group
         = s.label :forth_charge
-        = s.text_field :forth_charge, :placeholder => 'The 4th charge', :title => 'The 4th people charge in a room', class: 'form-group'
+        = s.text_field :forth_charge, :placeholder => 'The 4th charge', :title => 'The 4th people charge in a room', class: 'form-control'
     .col-md-6
       .form-group
         = s.label :price1
