--- a/app/views/travel_admin/tours/spots/_form.html.haml
+++ b/app/views/travel_admin/tours/spots/_form.html.haml
@@ -18,6 +18,7 @@
             = f.label :visit_order
             = f.text_field :visit_order, :class => 'form-control'
         = render :partial => 'travel_admin/shared/description', :locals => {:f => f}
+        = render :partial => 'travel_admin/shared/status', locals: {f: f}
     .modal-footer
       %button.btn{"aria-hidden" => "true", "data-dismiss" => "modal"} Close
       %button.btn.btn-primary{:onclick => "submit_dialog_form(this)"} Save changes
