--- a/app/views/travel_admin/tours/spots/_row.html.haml
+++ b/app/views/travel_admin/tours/spots/_row.html.haml
@@ -6,7 +6,7 @@
         \#{row.visit_order})
         \#{"#{row.destination.description.title}, #{row.destination.description.title_cn}" if row.destination}
         .btn-group
-          = icon_link_to '',"spots/#{row.id}", :remote => true, :class => 'btn btn-default btn-mini', :icon => 'icon-picture', :title => "Use blow destination's thumb as spot's icon"
+          = icon_link_to '',"spots/#{row.id}", :remote => true, :class => 'btn btn-default btn-mini', :icon => 'icon-circle-arrow-up', :title => "Use this destination's thumb as spot's icon"
           = icon_link_to '', "spots/#{row.id}/edit", :remote => true, :class => 'btn btn-success btn-mini', :icon => 'icon-pencil', :title => 'Edit'
           = icon_link_to '', "spots/#{row.id}", :remote => true, :method => :delete, :confirm => 'Are you sure to delete this spot?', :icon => 'icon-trash', :title => 'Show/Hide this spot from website', :class => 'btn btn-default btn-mini'
       .row
