--- a/app/views/layouts/travel_admin/application.html.haml
+++ b/app/views/layouts/travel_admin/application.html.haml
@@ -7,9 +7,11 @@
     %meta{:content => "width=device-width, initial-scale=1.0", :name => @title}
     %link{:href=>"//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.no-icons.min.css", :rel=>"stylesheet"}
     %link{:href=>"//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css", :rel=>"stylesheet"}
+    %link{:href=>"/css/bs3_datepicker/bs3_datepicker.css", :rel=>"stylesheet"}
     = stylesheet_link_tag 'admin/admin'
     = javascript_include_tag 'admin/admin', '/css/xheditor/xheditor-1.1.14-zh-cn.min' 
     %script{:src=>"//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"}
+    %script{:src=>"/css/bs3_datepicker/bs3_datepicker.js"}
     = csrf_meta_tags
     = render 'travel_admin/shared/head_script'
     = yield :head
